// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcFullScreenOverlay > #slots > #content - should be rendered when passed 1`] = `
<transition-stub
  appear="false"
  css="true"
  name="ec-full-screen-overlay__fade"
  persisted="false"
>
  <div
    class="ec-full-screen-overlay tw-bg-gray-8"
    data-test="ec-full-screen-overlay"
  >
    
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque a tristique enim. Nulla consequat vitae metus in ultricies.
    
  </div>
</transition-stub>
`;

exports[`EcFullScreenOverlay > #slots > #header - should be rendered when passed 1`] = `
<transition-stub
  appear="false"
  css="true"
  name="ec-full-screen-overlay__fade"
  persisted="false"
>
  <div
    class="ec-full-screen-overlay tw-bg-gray-8"
    data-test="ec-full-screen-overlay"
  >
    
    <div
      class="ec-full-screen-overlay__content"
      data-test="ec-full-screen-overlay__content"
    >
      <header
        class="ec-full-screen-overlay__header"
        data-test="ec-full-screen-overlay__header"
      >
        
        Lorem Title
        
        <button
          class="ec-full-screen-overlay__close-icon-btn"
          data-test="ec-full-screen-overlay__close-icon-btn"
          type="button"
        >
          <span
            class="tw-sr-only"
          >
            Close
          </span>
          <svg
            class="ec-icon ec-icon--interactive ec-full-screen-overlay__close-icon"
            data-test="ec-full-screen-overlay__close-icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#ec-simple-close"
            />
          </svg>
        </button>
      </header>
      <main
        data-test="ec-full-screen-overlay__main"
      >
        
        
      </main>
    </div>
    
  </div>
</transition-stub>
`;

exports[`EcFullScreenOverlay > #slots > #main - should be rendered when passed 1`] = `
<transition-stub
  appear="false"
  css="true"
  name="ec-full-screen-overlay__fade"
  persisted="false"
>
  <div
    class="ec-full-screen-overlay tw-bg-gray-8"
    data-test="ec-full-screen-overlay"
  >
    
    <div
      class="ec-full-screen-overlay__content"
      data-test="ec-full-screen-overlay__content"
    >
      <header
        class="ec-full-screen-overlay__header"
        data-test="ec-full-screen-overlay__header"
      >
        <h1
          class="ec-full-screen-overlay__title"
          data-test="ec-full-screen-overlay__title"
        >
          Full screen overlay title
        </h1>
        <button
          class="ec-full-screen-overlay__close-icon-btn"
          data-test="ec-full-screen-overlay__close-icon-btn"
          type="button"
        >
          <span
            class="tw-sr-only"
          >
            Close
          </span>
          <svg
            class="ec-icon ec-icon--interactive ec-full-screen-overlay__close-icon"
            data-test="ec-full-screen-overlay__close-icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#ec-simple-close"
            />
          </svg>
        </button>
      </header>
      <main
        data-test="ec-full-screen-overlay__main"
      >
        
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque a tristique enim. Nulla consequat vitae metus in ultricies.
        
      </main>
    </div>
    
  </div>
</transition-stub>
`;

exports[`EcFullScreenOverlay > :props > :backgroundColorLevel - should render with the background css class passed 1`] = `
<div
  class="ec-full-screen-overlay tw-bg-gray-5"
  data-test="ec-full-screen-overlay"
>
  
  <div
    class="ec-full-screen-overlay__content"
    data-test="ec-full-screen-overlay__content"
  >
    <header
      class="ec-full-screen-overlay__header"
      data-test="ec-full-screen-overlay__header"
    >
      <h1
        class="ec-full-screen-overlay__title"
        data-test="ec-full-screen-overlay__title"
      >
        Full screen overlay title
      </h1>
      <button
        class="ec-full-screen-overlay__close-icon-btn"
        data-test="ec-full-screen-overlay__close-icon-btn"
        type="button"
      >
        <span
          class="tw-sr-only"
        >
          Close
        </span>
        <svg
          class="ec-icon ec-icon--interactive ec-full-screen-overlay__close-icon"
          data-test="ec-full-screen-overlay__close-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-close"
          />
        </svg>
      </button>
    </header>
    <main
      data-test="ec-full-screen-overlay__main"
    >
      
      
    </main>
  </div>
  
</div>
`;

exports[`EcFullScreenOverlay > :props > :title - should render the title 1`] = `
<h1
  class="ec-full-screen-overlay__title"
  data-test="ec-full-screen-overlay__title"
>
  Lorem title
</h1>
`;

exports[`EcFullScreenOverlay > :props > :title - should render without the title 1`] = `
<header
  class="ec-full-screen-overlay__header"
  data-test="ec-full-screen-overlay__header"
>
  <!--v-if-->
  <button
    class="ec-full-screen-overlay__close-icon-btn"
    data-test="ec-full-screen-overlay__close-icon-btn"
    type="button"
  >
    <span
      class="tw-sr-only"
    >
      Close
    </span>
    <svg
      class="ec-icon ec-icon--interactive ec-full-screen-overlay__close-icon"
      data-test="ec-full-screen-overlay__close-icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-close"
      />
    </svg>
  </button>
</header>
`;

exports[`EcFullScreenOverlay > should render as expected 1`] = `
<transition-stub
  appear="false"
  css="true"
  name="ec-full-screen-overlay__fade"
  persisted="false"
>
  <div
    class="ec-full-screen-overlay tw-bg-gray-8"
    data-test="ec-full-screen-overlay"
  >
    
    <div
      class="ec-full-screen-overlay__content"
      data-test="ec-full-screen-overlay__content"
    >
      <header
        class="ec-full-screen-overlay__header"
        data-test="ec-full-screen-overlay__header"
      >
        <h1
          class="ec-full-screen-overlay__title"
          data-test="ec-full-screen-overlay__title"
        >
          Full screen overlay title
        </h1>
        <button
          class="ec-full-screen-overlay__close-icon-btn"
          data-test="ec-full-screen-overlay__close-icon-btn"
          type="button"
        >
          <span
            class="tw-sr-only"
          >
            Close
          </span>
          <svg
            class="ec-icon ec-icon--interactive ec-full-screen-overlay__close-icon"
            data-test="ec-full-screen-overlay__close-icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#ec-simple-close"
            />
          </svg>
        </button>
      </header>
      <main
        data-test="ec-full-screen-overlay__main"
      >
        
        
      </main>
    </div>
    
  </div>
</transition-stub>
`;

exports[`EcFullScreenOverlay > should render with custom attributes 1`] = `
<transition-stub
  appear="false"
  css="true"
  name="ec-full-screen-overlay__fade"
  persisted="false"
>
  <div
    class="ec-full-screen-overlay tw-bg-gray-8 my-class"
    data-test="my-data-test ec-full-screen-overlay"
    id="test-id"
  >
    
    <div
      class="ec-full-screen-overlay__content"
      data-test="ec-full-screen-overlay__content"
    >
      <header
        class="ec-full-screen-overlay__header"
        data-test="ec-full-screen-overlay__header"
      >
        <h1
          class="ec-full-screen-overlay__title"
          data-test="ec-full-screen-overlay__title"
        >
          Full screen overlay title
        </h1>
        <button
          class="ec-full-screen-overlay__close-icon-btn"
          data-test="ec-full-screen-overlay__close-icon-btn"
          type="button"
        >
          <span
            class="tw-sr-only"
          >
            Close
          </span>
          <svg
            class="ec-icon ec-icon--interactive ec-full-screen-overlay__close-icon"
            data-test="ec-full-screen-overlay__close-icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#ec-simple-close"
            />
          </svg>
        </button>
      </header>
      <main
        data-test="ec-full-screen-overlay__main"
      >
        
        
      </main>
    </div>
    
  </div>
</transition-stub>
`;
